syntax = "proto3";

import "google/protobuf/wrappers.proto";

package sharingsession;

option java_package = "com.gdn.sharingsession.practicalgrpc.server.generatedproto";
option java_outer_classname = "BookStoreProto";

service BookStoreService {
    rpc GetAllBook (GetAllBookRequest) returns (GetAllBookResponse);

    rpc StreamAllBook (GetAllBookRequest) returns (stream GetBookResponse);

    rpc CreateBookBulk (stream CreateBookRequest) returns (CreateBulkBookResponse);

    rpc CreateBookOneByOne (stream CreateBookRequest) returns (stream CreateBookResponse);
}

message CreateBookRequest {
    string title = 1;
    string author = 2;
}

message CreateBookResponse {
    string id = 1;
    string title = 2;
}

message CreateBulkBookResponse {
    repeated CreateBookResponse createBookResponses = 1;
}

message GetBookResponse {
    string id = 1;
    string title = 2;
}

message GetAllBookRequest {
}

message GetAllBookResponse {
    repeated GetBookResponse getBookResponses = 1;
}